bug fix - employee list overflow screen

--- a/src/app/components/employee-list/employee-list.component.scss
+++ b/src/app/components/employee-list/employee-list.component.scss
@@ -1,8 +1,7 @@
-ion-content {
-    padding: 0px;
-    margin: 0px;
+ion-content {}
 
-
+.list-page {
+    padding-bottom: 75px;
 }
 
 ion-card {
